fixed search bar font size on smaller devices

--- a/source/css/_partial/rwd.styl
+++ b/source/css/_partial/rwd.styl
@@ -43,6 +43,8 @@
       font-size: 180%
   .meta-separator
     display: none
+.search-bar
+  font-size: medium
 
 // Mobile
 @media (max-width:767px)
@@ -151,3 +153,6 @@
     display: none
   .front-table-category
     color: color-default !important
+
+.search-bar
+  font-size: small
